log
Fri, May 16, 2025  5:17:27 PM: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  0|0
3f0e54c
Fri, May 16, 2025  5:19:15 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eea3d95
Fri, May 16, 2025  5:24:15 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
13158f0
Fri, May 16, 2025  5:29:58 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7aee7cb
Fri, May 16, 2025  5:50:08 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0356ee4
Fri, May 16, 2025  6:39:08 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  5|3
total_score: 35/70
7dcd48f
Fri, May 16, 2025  6:53:38 PM: 
 sudoku.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
5ce4ba8
Fri, May 16, 2025  7:18:46 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
b278cdc
Fri, May 16, 2025  7:25:32 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
762d05f
Fri, May 16, 2025  7:46:42 PM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:135:10: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
   while (size(S) != 0){ //mientras que hayan elementos en la fila
          ^~~~
sudoku.c:136:15: error: void value not ignored as it ought to be
     Node* n = pop(S); //eliminamos el actual
               ^~~
cc1.exe: all warnings being treated as errors
ec899ec
Fri, May 16, 2025  7:53:42 PM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:136:19: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
     Node* n = top(initial);
                   ^~~~~~~
In file included from test.c:4:0:
list.h:32:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void* top(Stack* s);
       ^~~
cc1.exe: all warnings being treated as errors
0e94bbd
Fri, May 16, 2025  7:54:27 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:135:10: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
   while (size(S) != 0){ //mientras que hayan elementos en la fila
          ^~~~
sudoku.c:136:19: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
     Node* n = top(initial);
                   ^~~~~~~
In file included from test.c:4:0:
list.h:32:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void* top(Stack* s);
       ^~~
cc1.exe: all warnings being treated as errors
01cca60
Fri, May 16, 2025  7:54:49 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:136:19: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
     Node* n = top(initial);
                   ^~~~~~~
In file included from test.c:4:0:
list.h:32:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'Node * {aka struct <anonymous> *}'
 void* top(Stack* s);
       ^~~
cc1.exe: all warnings being treated as errors
16327b6
Fri, May 16, 2025  8:00:05 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
53eb364
